Test/dafny0/NestedPatternsA.dfy.expect
NestedPatternsA.dfy(9,7): Error: parentheses are not allowed around a pattern
NestedPatternsA.dfy(10,7): Error: parentheses are not allowed around a pattern
NestedPatternsA.dfy(16,7): Error: parentheses are not allowed around a pattern
NestedPatternsA.dfy(17,7): Error: parentheses are not allowed around a pattern
4 resolution/type errors detected in NestedPatternsA.dfy
